--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "modules/uavcan_v1/public_regulated_data_types"]
 	path = modules/uavcan_v1/public_regulated_data_types
 	url = https://github.com/UAVCAN/public_regulated_data_types.git
+[submodule "modules/uavcan_v1/nunavut_c_headers"]
+	path = modules/uavcan_v1/nunavut_c_headers
+	url = git@github.com:PonomarevDA/nunavut_c_headers.git
